// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests on <SearchScreen /> should be shown itself with the default values 1`] = `
<div>
  <h1>
    Search Screen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-md-4"
    >
      <h4>
        Search Form
      </h4>
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <input
            autoComplete="off"
            className="form-control"
            name="search"
            onChange={[Function]}
            placeholder="Find your hero here..."
            type="text"
            value=""
          />
        </div>
        <button
          className="btn btn-block btn-outline-primary"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-md-8"
    >
      <h4>
        0
         results for "
        "
      </h4>
      <hr />
      <div
        className="results"
      >
        <small
          className="alert alert-info"
        >
          No results here!
        </small>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tests on <SearchScreen /> should show Batman and the input with the queryString 1`] = `
<div>
  <h1>
    Search Screen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-md-4"
    >
      <h4>
        Search Form
      </h4>
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <input
            autoComplete="off"
            className="form-control"
            name="search"
            onChange={[Function]}
            placeholder="Find your hero here..."
            type="text"
            value="batman"
          />
        </div>
        <button
          className="btn btn-block btn-outline-primary"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-md-8"
    >
      <h4>
        1
         results for "
        batman
        "
      </h4>
      <hr />
      <div
        className="results"
      >
        <div
          className="card ms-3 hero-card"
        >
          <img
            alt="Batman"
            className="card-img"
            src=""
          />
          <div
            className="card-body"
          >
            <div
              className="characters dc"
            >
              <a
                href="/hero/dc-batman"
                onClick={[Function]}
              >
                <h4
                  className="text-center"
                >
                  Bruce Wayne
                </h4>
              </a>
            </div>
            <h5
              className="card-title"
            >
              Batman
            </h5>
            <p
              className="card-text"
            >
              Bruce Wayne
            </p>
            <small
              className="text-muted"
            >
              Detective Comics #27
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
